--- a/package.json
+++ b/package.json
@@ -11,23 +11,31 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@mdx-js/mdx": "^1.6.1",
     "@mdx-js/react": "^1.6.1",
+    "axios": "^0.19.2",
+    "formik": "^2.1.4",
     "gatsby": "^2.21.13",
     "gatsby-image": "^2.4.1",
+    "gatsby-paginate": "^1.1.1",
     "gatsby-plugin-manifest": "^2.4.2",
     "gatsby-plugin-mdx": "^1.2.6",
     "gatsby-plugin-offline": "^3.2.1",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sharp": "^2.6.1",
+    "gatsby-remark-prismjs": "^3.5.1",
     "gatsby-source-filesystem": "^2.3.1",
+    "gatsby-transformer-remark": "^2.8.7",
     "gatsby-transformer-sharp": "^2.5.1",
+    "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-paginate": "^6.3.2",
     "react-scroll": "^1.7.16",
     "styled-components": "^5.1.0",
     "typeface-lato": "^0.0.75",
-    "typeface-merriweather": "^0.0.72"
+    "typeface-merriweather": "^0.0.72",
+    "yup": "^0.28.5"
   },
   "devDependencies": {
     "prettier": "2.0.5"
