--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "gatsby-transformer-sharp": "^2.5.1",
     "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
+    "qs": "^6.9.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-recaptcha": "^2.0.1",
     "react-helmet": "^6.0.0",
     "react-paginate": "^6.3.2",
     "react-scroll": "^1.7.16",
